# streamlit-playground

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml  secrets.toml
src/: main.py
src/apps/: gitops.py  home.py
src/tests/: test_home.py
