[project]
name = "streamlit-playground"
version = "1.0.0"
description = "A playground to test Streamlit developments."
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygithub>=2.8.1",
    "python-gitlab>=7.0.0",
    "pyyaml>=6.0.3",
    "requests",
    "streamlit",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
test = [
    "pytest",
]
